# rust-datastar-template

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  justfile
assets/css/: base.css  color-scheme-dark.css  color-scheme-light.css
assets/js/: colorScheme.js  datastar.js  plugins.js
events/: hot_reload.js
examples/: keygen.rs
locales/en-GB/: credentials_invalid.j2  password_invalid_characters.j2  password_invalid_length.j2  send_us_this_identifier.j2  username_already_taken.j2  username_invalid.j2  username_invalid_characters.j2  username_invalid_format.j2  username_invalid_length.j2
sql/: schema.surql
sql/dev/: dev_user.surql
sql/repo/: auth.surql  user.surql
src/: _dev.rs  _test.rs  config.rs  error.rs  lib.rs  main.rs
src/assets/css/: _base.css  _reset.css  _utilities.css  global.css
src/assets/ts/: customElements.ts
src/models/: user.rs
src/repo/: auth.rs  error.rs  mod.rs  streams.rs  user.rs
src/resources/: base.j2  mod.rs
src/resources/index/: mod.rs  page.j2  script.ts  style.css
src/web/: events.rs  guards.rs  mod.rs  queries.rs
src/web/pages/: app.rs  mod.rs  public.rs
templates/events/: hot_reload.js  redirect.js
templates/layouts/: base.j2
templates/macros/: auth.j2  color_schemes.j2
templates/pages/: index.j2  login.j2  not_found.j2  service_unavailable.j2  signup.j2
templates/pages/app/: home.j2
