[package]
name = "rust-datastar-template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.46.0"
asynk-strim = "0.1.5"
axum = "0.8.8"
brotli = "8.0.2"
datastar = { version = "0.3.1", features = ["axum"] }
dotenvy = "0.15.7"
envy = "0.4.2"
esbuild-rs = "0.13.8"
futures-util = "0.3.31"
lightningcss = "1.0.0-alpha.69"
mime = "0.3.17"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["compression-br", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
esbuild-rs = "0.13.8"
glob = "0.3.3"
lightningcss = "1.0.0-alpha.69"
minify-html = "0.18.1"
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[dev-dependencies]
rand = "0.9.2"
tower = "0.5.3"

# taken from https://tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.
